# tigerduck-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MIGRATE.md  README.en.md  README.md  _compose-files.sh  alembic.ini  clean-db.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  logs.sh  pyproject.toml  start.sh  stop.sh
api/: .env.template  AGENTS.md  __init__.py  course_list.py  course_lookup.py  get_calender.py  get_moodle_homework.py  ntust_sso.py  template.py
api/bulletin/: grepper.py
api/moodle/: assignments.py  auth.py  enrolled_courses.py  functions.py  homework.py  site_info.py  submission_status.py
api/ntust/: course_list.py  course_lookup.py  html_score_parser.py  score_list.py  sso.py
api/public/: bulletin.py  calendar.py
deploy/launchd/: README.md  ai.tigerduck.llm.plist
docs/: local-dev-backend.md  portal-design.md  scheduler.md
portal/: Dockerfile  pyproject.toml
portal/app/: auth.py  config.py  db.py  logs.py  main.py  status.py
portal/app/routes/: admins.py  announcement.py  backup.py  custom_push.py  device_lists.py  devices.py  logs.py  status.py  test_push.py
portal/app/static/: portal.css
portal/app/templates/: _base.html  admins.html  announcement.html  backup.html  custom_push.html  logs.html  status.html  test_push.html
portal/web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
portal/web/src/: App.tsx  index.css  main.tsx
portal/web/src/components/: layout.tsx  theme-toggle.tsx
portal/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  radio-group.tsx  section.tsx  select.tsx  skeleton.tsx  table.tsx  tabs.tsx  textarea.tsx
portal/web/src/hooks/: use-env.ts  use-theme.ts
portal/web/src/lib/: api.ts
portal/web/src/pages/: announcement.tsx  apple-test-push.tsx  backup.tsx  custom-push.tsx  devices.tsx  lists.tsx  logs.tsx  status.tsx
portal/web/src/types/: api.ts
scripts/: backfill_bulletins.py  seed_test_bulletins.py
server/: .env.template  AGENTS.md  __init__.py  _ssl_compat.py  config.py  db.py  logging_setup.py  main.py  models.py  schemas.py  security.py
server/bulletins/: __init__.py  dedup.py  detail.py  dispatcher.py  jobs.py  matcher.py  models.py  schemas.py  scraper.py  taxonomy.py
server/migrations/: env.py
server/push/: apns_client.py  custom_push_dispatcher.py  custom_push_targeting.py  fcm_client.py  payload.py  router.py
server/routes/: bulletins.py  custom_push.py  debug.py  device_lists.py  devices.py  live_activities.py  schedule.py
server/scheduler/: dispatcher.py  retention.py  runtime.py
server/tests/: conftest.py  test_apns_client.py  test_bulletin_llm.py  test_bulletin_matcher.py  test_bulletin_models.py  test_bulletin_pipeline.py  test_bulletin_routes.py  test_bulletin_scraper.py  test_bulletins_dispatcher_custom_filter.py  test_custom_push_dispatcher.py  test_custom_push_route.py  test_custom_push_targeting.py  test_device_lists_route.py  test_devices.py  test_dispatcher.py  test_dispatcher_android.py  test_dispatcher_classify.py  test_fcm_payload.py  test_live_activities.py  test_payload.py  test_payload_custom_push.py  test_retention.py  test_schedule.py  test_schemas_device_register.py  (+2 more)
(+347 files in other folders)
