[project]
name = "backend"
version = "2.1.0"
description = "TigerDuck push notification server (FastAPI + APScheduler + APNs + bulletin LLM classifier)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "aioapns>=3.4",
    "firebase-admin>=6.5.0",
    "apscheduler>=3.10.4",
    "pyjwt[crypto]>=2.10.0",
    "structlog>=24.4.0",
    "httpx[http2]>=0.28.1",
    "selectolax>=0.4.7",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["server/tests"]
