[project]
name = "tigerduck-portal"
version = "0.1.0"
description = "Admin portal for the TigerDuck backend stack. Cloudflare Zero Trust handles auth; portal observes container/DB state and exposes admin/audit/export-import."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.28",
    # Direct DB access for status pings + export pg_dump.
    "asyncpg>=0.30",
    # Pydantic settings reads TIGERDUCK_* env from the container env.
    "pydantic-settings>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
